...
        android:background="@color/background_white"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:id="@+id/clock_layout"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/category_list"
            android:layout_marginTop="18dp"
            android:layout_height="51dp"
            app:layout_widthPercent="90%">

            <ImageView
                android:id="@+id/drawer_meun"
...
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:id="@+id/logo_angeltalk"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/logo_angeltalk_dark"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_centerInParent="true"/>
...
