package angeltalk.plus.presentation.activity.v1;


import androidx.annotation.NonNull;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;

import org.hamcrest.Matcher;
import org.hamcrest.Matchers;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import angeltalk.plus.R;
import angeltalk.plus.presentation.activity.CategoryMenuActivity;
import angeltalk.plus.presentation.activity.TestUtil;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MoveToAnotherCategoryTest {

    @Rule
    public ActivityTestRule<CategoryMenuActivity> mActivityTestRule = new ActivityTestRule<>(CategoryMenuActivity.class);

    @Test
    public void moveToAnotherCategoryTest() {

        onView(secondCategoryItemMatcher())
                .check(matches(isDisplayed()))
                .perform(click());

        onView(withId(R.id.category_item_title))
                .check(matches(isDisplayed()))
                .check(matches(withText("놀이")));
        onView(withId(R.id.back_button))
                .check(matches(isDisplayed()))
                .perform(click());

        onView(withId(R.id.logo_angeltalk))
                .check(matches(isDisplayed()));
        onView(fourthCategoryItemMatcher())
                .check(matches(isDisplayed()))
                .perform(click());

        onView(withId(R.id.category_item_title))
                .check(matches(isDisplayed()))
                .check(matches(withText("가고 싶은 곳")));
    }

    @NonNull
    private Matcher<View> fourthCategoryItemMatcher() {
        return Matchers.allOf(
                withId(R.id.category_item_card),
                TestUtil.childAtPosition(withId(R.id.category_list),3)
        );
    }

    @NonNull
    private Matcher<View> secondCategoryItemMatcher() {
        return Matchers.allOf(
                withId(R.id.category_item_card),
                TestUtil.childAtPosition(withId(R.id.category_list), 1)
        );
    }
}
